# ctos-datamine-mapper-interface-fork

./: .gitignore  README.md  app_wired.py  backend_client.py  eg.env  nohup.out  ollama_setup.sh  requirements.txt  run.sh
frederick/si-tamer/python/: pyproject.toml
frederick/si-tamer/python/data_utils/: embedding-loader.py
frederick/si-tamer/python/tests/: conftest.py
ncit-semantic-mapper/: README.md  eg.env  pyproject.toml  re_embed_14168626.out  re_embed_database.py  requirements.txt
ncit-semantic-mapper/core_tools/: config.py  exact_match.py  llm_agent.py  semantic_retrievers.py  synonym_tool-Copy1.py  synonym_tool.py  tools.py
ncit-semantic-mapper/kg_toolkit/: exact_match.py  semantic_retrievers.py  streamlit_multipage_app.py
ncit-semantic-mapper/pages/: __init__.py  home.py  live_mode.py  training_mode.py
ncit-semantic-mapper/src/kg_toolkit/: exact_match.py  llm_agent_4o.py  semantic_retrievers.py  streamlit_multipage_app.py  synonym_tool.py
ncit-semantic-mapper/src/kg_toolkit/pages/: training_mode.py
ncit-semantic-mapper/src/kg_toolkit/tests/: connection_test.py  test_exact_match.py  test_interactive_vector_search.py  test_llm_agent.py  test_reranker.py  (+3 more)
ncit-semantic-mapper/src/ncit_semantic_mapper/: __init__.py  config.py  llm_agent.py
ncit-semantic-mapper/src/ncit_semantic_mapper.egg-info/: PKG-INFO  requires.txt  top_level.txt
ncit-semantic-mapper/tests/: conftest.py  connection_test.py  gds_querying.py  test_exact_match.py  test_neoretrievers.py  test_reranker.py  test_semantic_retrievers.py  test_synonyms.py
ncit-semantic-mapper/utils/: feedback_collector.py  search_engine.py
(+96 files in other folders)
