[project]
name = "ncit-semantic-mapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "neo4j>=5.28.1",
    "openai>=1.95.1",
    "pydotenv>=0.0.7",
]
