[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-toolkit"
version = "0.1.0"
description = "A semantic mapping and retrieval toolkit for NCIT and caDSR"
readme = "README.md"
authors = [{ name = "Tazeen Shaukat" }]
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "neo4j>=5.15.0",
    "langchain>=0.2.0",      
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-ollama>=0.1.0",
    "langchain-neo4j>=0.1.0",  
    "python-dotenv>=1.0.0",    
    "pydantic>=2.0.0",       
    "numpy>=1.26.0",         
    "tqdm>=4.66.0"           
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]